# HelixEngine

./: .gitignore  CMakeLists.txt  README.md
assets/sprites/: CharFemale.aseprite  CharMale.aseprite  Tiles.aseprite  Tiles.conf
assets/sprites/aseprite/: Items.aseprite  Tiles.aseprite  banana.aseprite  ingot_gold.aseprite  ingot_iron.aseprite  pickaxe_iron.aseprite  stick.aseprite  sword_iron.aseprite
src/: game.cpp  physics.cpp  test.cpp  verletTest.cpp
src/common/: Animation.cpp  Animation.hpp  Camera.cpp  Camera.hpp  Random.cpp  Random.hpp
src/content/: Hotbar.cpp  Hotbar.hpp  Inventory.cpp  Inventory.hpp  Player.cpp  Player.hpp
src/content/items/: Banana.cpp  Banana.hpp  IngotGold.cpp  IngotGold.hpp  IngotIron.cpp  IngotIron.hpp  Item.cpp  Item.hpp  PickaxeIron.cpp  PickaxeIron.hpp  Stick.cpp  Stick.hpp  SwordIron.cpp  SwordIron.hpp  TileItem.cpp  TileItem.hpp
src/oldEngineCode/headers/: animation.cpp  animation.h  noise.cpp  noise.h  physics.cpp  physics.h  vmath.cpp  vmath.h
src/oldEngineCode/oldPhysicsManager/: PhysicsManager.cpp  PhysicsManager.hpp
src/oldEngineCode/src/: main.cpp
src/oldEngineCode/src/experiments/fluidtest/: FluidController.cpp  FluidController.h
src/oldEngineCode/src/game/world/: Chunk.cpp  Chunk.h  ChunkHandler.cpp  ChunkHandler.h  Tile.cpp  Tile.h
src/oldEngineCode/src/game/world/physics/: Circle.cpp  Circle.h  PhysicsHandler.cpp  PhysicsHandler.h  PhysicsTest_.cpp  PhysicsTest_.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
src/oldEngineCode/src/ui/: Button.cpp  Button.h  ButtonStyle.cpp  ButtonStyle.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h
src/physics/: CircleObject.cpp  CircleObject.hpp  ItemObject.cpp  ItemObject.hpp  Link.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsObject.cpp  PhysicsObject.hpp  RectangleObject.cpp  RectangleObject.hpp  Solver.hpp  VerletObject.hpp
src/scene/: GameManager.cpp  GameManager.hpp  GameScene.cpp  GameScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  Resources.cpp  Resources.hpp  Scene.cpp  Scene.hpp  Textures.cpp  Textures.hpp  main.cpp
src/system/: ECS.hpp  Engine.hpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  ItemManager.cpp  ItemManager.hpp  UserInterface.cpp  UserInterface.hpp
src/tilemap/: Chunk.cpp  Chunk.hpp  MapGenerator.cpp  MapGenerator.hpp  TileMap.cpp  TileMap.hpp
src/verlet/: Solver.cpp  Solver.hpp  VectorMath.cpp  VectorMath.hpp  VerletObject.cpp  verletTest.cpp
